Simplificar Gateway: usar URLs directas en lugar de service discovery